# image_to_ascii

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKTOBERFEST_ISSUES.md  README.md  gallery.html  multiscaled  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: ascii_generation.md  character_mapping.md  cli_usage.md  image_loading.md  output_saving.md
specs/001-specify-the-project/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-specify-the-project/checklists/: implementation.md  requirements.md
specs/001-specify-the-project/contracts/: function-interfaces.md
src/image_to_ascii/: ascii_conversion.py  cli.py  custom_image_processing.py  dithering.py  image_processing.py  output.py  symbol_selection.py  web_view.py  webstream.py
src/image_to_ascii.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/image_to_ascii/implementations/: README.md  __init__.py  base_converter.py  brightness_converter.py  cnn_converter.py  ea_converter.py  edged_converter.py  method.py  mode_converter.py  multi_scale_converter.py  pca_converter.py
src/image_to_ascii/implementations/network/: index.html  streamer.py
src/image_to_ascii/models/: __init__.py  ascii_symbols.py  cnn_model.py
src/image_to_ascii/utils/: process.py
tests/unit/: test_ascii_conversion.py  test_ascii_conversion_edged.py  test_batch_processing.py  test_brightness_ascii.py  test_brightness_converter.py  test_cli_ea_integration.py  test_cnn_converter.py  test_dithering.py  test_ea_converter.py  test_image_processing.py  test_output.py  test_symbol_selection.py
